--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@
   width: 50vw;
   display: inline-block;
   word-wrap: break-word;
-  background-color: #fff125; 
+  background-color: #fff; 
   z-index: 10;
 }
 .infor2{
@@ -264,7 +264,7 @@
   flex-wrap: wrap;
   word-wrap: break-word;
   overflow-x: auto;
-  background-color: #fff125; 
+  background-color: #fff; 
   z-index: 10;
 }
 .box a{
